<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                tools:context=".MainActivity">

    <Button
        android:id="@+id/simple_dialog_button"
        android:text="@string/simple_dialog_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/list_dialog_button"
        android:text="@string/list_dialog_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/multilist_dialog_button"
        android:text="@string/multilist_dialog_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/custom_dialog_button"
        android:text="@string/custom_dialog_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/time_dialog_button"
        android:text="@string/time_dialog_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/date_dialog_button"
        android:text="@string/date_dialog_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
